--- a/chess.html
+++ b/chess.html
@@ -1,28 +1,121 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <title>Chess board</title>
-    <style>
-        .cell {
-            height: 30px;
-            width: 30px;
-            border: 1.5px solid grey;
-            border-style: inset;
-        }
- 
-        .greencell {
-            background-color: #AFE1AF;
-        }
+<html>
 
-        .darkgreencell {
-            background-color: #097969;
-        }
-        .redcell {
-            background-color: red;
-        }
-    </style>
+<head>
+<meta charset="UTF-8"> 
+<title>Chessboard using Pure CSS and HTML</title>
+
+<style type="text/css">
+
+.chessboard {
+    width: 640px;
+    height: 640px;
+    margin: 20px;
+    border: 25px solid #333;
+}
+.black {
+    float: left;
+    width: 80px;
+    height: 80px;
+    background-color: #999;
+      font-size:50px;
+    text-align:center;
+    display: table-cell;
+    vertical-align:middle;
+}
+.white {
+    float: left;
+    width: 80px;
+    height: 80px;
+    background-color: #fff;
+    font-size:50px;
+    text-align:center;
+    display: table-cell;
+    vertical-align:middle;
+}
+
+</style>
+
 </head>
+
 <body>
-<script src="js/chess.js" defer></script>
+>
+<div class="chessboard">
+<!-- 1st -->
+<div class="white" draggable="true">&#9820;</div>
+<div class="black" draggable="true">&#9822;</div>
+<div class="white" draggable="true">&#9821;</div>
+<div class="black"  draggable="true">&#9819;</div>
+<div class="white"  draggable="true">&#9818;</div>
+<div class="black"  draggable="true">&#9821;</div>
+<div class="white"  draggable="true">&#9822;</div>
+<div class="black"  draggable="true">&#9820;</div>
+<!-- 2nd -->
+<div class="black"  draggable="true">&#9821;</div>
+<div class="white"  draggable="true">&#9821;</div>
+<div class="black"  draggable="true">&#9821;</div>
+<div class="white"  draggable="true">&#9821;</div>
+<div class="black"  draggable="true">&#9821;</div>
+<div class="white"  draggable="true">&#9821;</div>
+<div class="black"  draggable="true">&#9821;</div>
+<div class="white"  draggable="true">&#9821;</div>
+<!-- 3th -->
+<div class="white"  draggable="true"></div>
+<div class="black"  draggable="true"></div>
+<div class="white"  draggable="true"></div>
+<div class="black"  draggable="true"></div>
+<div class="white"  draggable="true"></div>
+<div class="black"  draggable="true"></div>
+<div class="white"  draggable="true"></div>
+<div class="black"  draggable="true"></div>
+<!-- 4st -->
+<div class="black"  draggable="true"></div>
+<div class="white"  draggable="true"></div>
+<div class="black"  draggable="true"></div>
+<div class="white"  draggable="true"></div>
+<div class="black"  draggable="true"></div>
+<div class="white"  draggable="true"></div>
+<div class="black"  draggable="true"></div>
+<div class="white"  draggable="true"></div>
+<!-- 5th -->
+<div class="white"  draggable="true"></div>
+<div class="black"  draggable="true"></div>
+<div class="white"  draggable="true"></div>
+<div class="black"  draggable="true"></div>
+<div class="white"  draggable="true"></div>
+<div class="black"  draggable="true"></div>
+<div class="white"  draggable="true"></div>
+<div class="black"  draggable="true"></div>
+<!-- 6th -->
+<div class="black"  draggable="true"></div>
+<div class="white"  draggable="true"></div>
+<div class="black"  draggable="true"></div>
+<div class="white"  draggable="true"></div>
+<div class="black"  draggable="true"></div>
+<div class="white"  draggable="true"></div>
+<div class="black"  draggable="true"></div>
+<div class="white"  draggable="true"></div>
+<!-- 7th -->
+<div class="white"  draggable="true">&#9817;</div>
+<div class="black"  draggable="true">&#9817;</div>
+<div class="white"  draggable="true">&#9817;</div>
+<div class="black"  draggable="true">&#9817;</div>
+<div class="white"  draggable="true">&#9817;</div>
+<div class="black"  draggable="true">&#9817;</div>
+<div class="white"  draggable="true">&#9817;</div>
+<div class="black"  draggable="true">&#9817;</div>
+<!-- 8th -->
+<div class="black"  draggable="true">&#9814;</div>
+<div class="white"  draggable="true">&#9816;</div>
+<div class="black"  draggable="true">&#9815;</div>
+<div class="white"  draggable="true">&#9813;</div>
+<div class="black"  draggable="true">&#9812;</div>
+<div class="white"  draggable="true">&#9815;</div>
+<div class="black"  draggable="true">&#9816;</div>
+<div class="white"  draggable="true">&#9814;</div>
+</div>
+
+
+
+    <script src="js/chess.js" ></script
 </body>
 </html>
