--- a/chessweb/index.html
+++ b/chessweb/index.html
@@ -12,6 +12,7 @@
     height: 640px;
     margin: 20px;
     border: 25px solid #333;
+    opacity: 0.2;
     position:absolute
     
 }
@@ -20,22 +21,40 @@
     width: 80px;
     height: 80px;
     background-color: #999;
-      font-size:50px;
+    font-size:50px;
+    opacity:0.3;
     text-align:center;
     display: table-cell;
     vertical-align:middle;
     position: relative;
+    z-index:1;
 }
 #white {
     float: left;
     width: 80px;
     height: 80px;
     background-color: #fff;
+    opacity:0.3;
     font-size:50px;
     text-align:center;
     display: table-cell;
     vertical-align:middle;
     position: relative;
+    z-index:1;
+}
+
+#movdivs {
+    float: left;
+    width: 80px;
+    height: 80px;
+    background-color: rgb(255, 0, 0);
+    font-size:50px;
+    opacity:0.3;
+    text-align:center;
+    display: table-cell;
+    vertical-align:middle;
+    position: relative;
+    z-index:3;
 }
 
 #moveboard{
@@ -45,6 +64,7 @@
     margin:20px;
     border: 25px solid rgb(109, 104, 104);
     position:absolute;
+
 }
 
 
@@ -58,77 +78,77 @@
     <div id="chessboard"></div>
         <div id="moveboard">
             <!-- 1st -->
-            <div id="white" ></div>
-            <div id="black" ></div>
-            <div id="white" ></div>
-            <div id="black" ></div>
-            <div id="white" ></div>
-            <div id="black" ></div>
-            <div id="white" ></div>
-            <div id="black" ></div>
+            <div id="movdivs" ><div id="white"></div></div>
+            <div id="movdivs" ><div id="black"></div></div>
+            <div id="movdivs" ><div id="white"></div></div>
+            <div id="movdivs" ><div id="black"></div></div>
+            <div id="movdivs" ><div id="white"></div></div>
+            <div id="movdivs" ><div id="black"></div></div>
+            <div id="movdivs" ><div id="white"></div></div>
+            <div id="movdivs" ><div id="black"></div></div>
             <!-- 2nd -->
-            <div id="black" ></div>
-            <div id="white" ></div>
-            <div id="black" ></div>
-            <div id="white" ></div>
-            <div id="black" ></div>
-            <div id="white" ></div>
-            <div id="black" ></div>
-            <div id="white" ></div>
+            <div id="movdivs" ><div id="black"></div></div>
+            <div id="movdivs" ><div id="white"></div></div>
+            <div id="movdivs" ><div id="black"></div></div>
+            <div id="movdivs" ><div id="white"></div></div>
+            <div id="movdivs" ><div id="black"></div></div>
+            <div id="movdivs" ><div id="white"></div></div>
+            <div id="movdivs" ><div id="black"></div></div>
+            <div id="movdivs" ><div id="white"></div></div>
             <!-- 3th -->
-            <div id="white" ></div>
-            <div id="black" ></div>
-            <div id="white" ></div>
-            <div id="black" ></div>
-            <div id="white" ></div>
-            <div id="black" ></div>
-            <div id="white" ></div>
-            <div id="black" ></div>
+            <div id="movdivs" ><div id="white"></div></div>
+            <div id="movdivs" ><div id="black"></div></div>
+            <div id="movdivs" ><div id="white"></div></div>
+            <div id="movdivs" ><div id="black"></div></div>
+            <div id="movdivs" ><div id="white"></div></div>
+            <div id="movdivs" ><div id="black"></div></div>
+            <div id="movdivs" ><div id="white"></div></div>
+            <div id="movdivs" ><div id="black"></div></div>
             <!-- 4st -->
-            <div id="black" ></div>
-            <div id="white" ></div>
-            <div id="black" ></div>
-            <div id="white" ></div>
-            <div id="black" ></div>
-            <div id="white" ></div>
-            <div id="black" ></div>
-            <div id="white" ></div>
+            <div id="movdivs" ><div id="black"></div></div>
+            <div id="movdivs" ><div id="white"></div></div>
+            <div id="movdivs" ><div id="black"></div></div>
+            <div id="movdivs" ><div id="white"></div></div>
+            <div id="movdivs" ><div id="black"></div></div>
+            <div id="movdivs" ><div id="white"></div></div>
+            <div id="movdivs" ><div id="black"></div></div>
+            <div id="movdivs" ><div id="white"></div></div>
             <!-- 5th -->
-            <div id="white" ></div>
-            <div id="black" ></div>
-            <div id="white" ></div>
-            <div id="black" ></div>
-            <div id="white" ></div>
-            <div id="black" ></div>
-            <div id="white" ></div>
-            <div id="black" ></div>
+            <div id="movdivs" ><div id="white"></div></div>
+            <div id="movdivs" ><div id="black"></div></div>
+            <div id="movdivs" ><div id="white"></div></div>
+            <div id="movdivs" ><div id="black"></div></div>
+            <div id="movdivs" ><div id="white"></div></div>
+            <div id="movdivs" ><div id="black"></div></div>
+            <div id="movdivs" ><div id="white"></div></div>
+            <div id="movdivs" ><div id="black"></div></div>
             <!-- 6th -->
-            <div id="black" ></div>
-            <div id="white" ></div>
-            <div id="black" ></div>
-            <div id="white" ></div>
-            <div id="black" ></div>
-            <div id="white" ></div>
-            <div id="black" ></div>
-            <div id="white" ></div>
+            <div id="movdivs" ><div id="black"></div></div>
+            <div id="movdivs" ><div id="white"></div></div>
+            <div id="movdivs" ><div id="black"></div></div>
+            <div id="movdivs" ><div id="white"></div></div>
+            <div id="movdivs" ><div id="black"></div></div>
+            <div id="movdivs" ><div id="white"></div></div>
+            <div id="movdivs" ><div id="black"></div></div>
+            <div id="movdivs" ><div id="white"></div></div>
             <!-- 7th -->
-            <div id="white" ></div>
-            <div id="black" ></div>
-            <div id="white" ></div>
-            <div id="black" ></div>
-            <div id="white" ></div>
-            <div id="black" ></div>
-            <div id="white" ></div>
-            <div id="black" ></div>
+            <div id="movdivs" ><div id="white"></div></div>
+            <div id="movdivs" ><div id="black"></div></div>
+            <div id="movdivs" ><div id="white"></div></div>
+            <div id="movdivs" ><div id="black"></div></div>
+            <div id="movdivs" ><div id="white"></div></div>
+            <div id="movdivs" ><div id="black"></div></div>
+            <div id="movdivs" ><div id="white"></div></div>
+            <div id="movdivs" ><div id="black"></div></div>
             <!-- 8th -->
-            <div id="black" ></div>
-            <div id="white" ></div>
-            <div id="black" ></div>
-            <div id="white" ></div>
-            <div id="black" ></div>
-            <div id="white" ></div>
-            <div id="black" ></div>
-            <div id="white" ></div>
+            <div id="movdivs" ><div id="black"></div></div>
+            <div id="movdivs" ><div id="white"></div></div>
+            <div id="movdivs" ><div id="black"></div></div>
+            <div id="movdivs" ><div id="white"></div></div>
+            <div id="movdivs" ><div id="black"></div></div>
+            <div id="movdivs" ><div id="white"></div></div>
+            <div id="movdivs" ><div id="black"></div></div>
+            <div id="movdivs" ><div id="white"></div></div>
         </div>
 
     <script src="js/chess.js" ></script>
