checkmate completed and check completed

--- a/chessweb/index.html
+++ b/chessweb/index.html
@@ -44,7 +44,7 @@
     float: left;
     width: 80px;
     height: 80px;
-    background-color: red;
+    background-color: blue;
     font-size:50px;
     opacity:1;
     text-align:center;
@@ -146,7 +146,6 @@
             <div id="black"></div>
             <div id="white"></div>
         </div>
-
     <script src="js/chess.js" ></script>
 </body>
 </html>
