--- a/chessweb/index.html
+++ b/chessweb/index.html
@@ -70,7 +70,6 @@
 </head>
 
 <body>
-    <span>Player 1</span>
 
     <div id="chessboard">
             <!-- 1st -->
@@ -146,7 +145,7 @@
             <div id="black"></div>
             <div id="white"></div>
         </div>
-        <div></div>
+        <div>Player 1</div>
     <script src="js/chess.js" ></script>
 </body>
 </html>
